# rigs-of-rods

./: .clang-format  .gitignore  .gitmodules  .hgignore  .travis.yml  AUTHORS.md  BUILDING.md  CMakeDependenciesConfig.txt  CMakeLists.txt  CMakeMacros.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  README.md  appveyor.yml  conanfile.py  conanfile.txt  readme.txt  renovate.json  snapcraft.yaml  test.txt
doc/: CMakeLists.txt  Doxyfile.configurator.linux.conf  Doxyfile.updater.linux.conf  footer.html  rigsofrods.6  updateDoc.sh
doc/angelscript/: ActorSimAttributes.md  BeamClass.h  CVarClass.h  ConsoleClass.h  FreeBeams.md  FreeForces.md  GadgetSystem.md  GenericFileFormat.md  InputEngineClass.h  LocalStorage.h  Ogre3DBindings.md  ProceduralRoads.md  ScriptSideAPIs.h  ScriptingFeaturesOverview.md  SettingsClass.h  VehicleAI.h  game.h  global_functions.h  races.as
doc/angelscript/Game2Script/: script_callbacks.h
doc/angelscript/Script2Game/: (ValueTypes) color.h  (ValueTypes) degree.h  (ValueTypes) quaternion.h  (ValueTypes) radian.h  (ValueTypes) vector2.h  (ValueTypes) vector3.h  AircraftEngineClass.h  AutopilotClass.h  BeamClass.h  CVarClass.h  CacheEntryClass.h  CacheSystemClass.h  ConsoleClass.h  DashBoardManagerClass.h  EngineClass.h  EngineSimClass.h  GameScriptClass.h  GenericDocContextClass.h  GenericDocReaderClass.h  GenericDocumentClass.h  InputEngineClass.h  LocalStorage.h  LocalStorageClass.h  ProceduralManagerClass.h  ProceduralObjectClass.h  ProceduralPointClass.h  ProceduralRoadClass.h  ScrewpropClass.h  SoundClass.h  SoundScriptInstanceClass.h  SoundScriptTemplateClass.h  game.h  (+9 more)
doc/doxygen/: CodebaseOverview.md  Doxyfile.angelscript.linux.conf  Doxyfile.conf.in  Doxyfile.source.linux.conf  Doxyfile.source.windows.conf  MainPage.h  MainPage.md  Modules.h  Overview.h  UtilizingOgreResourceGroups.md  rigs-of-rods-angelscript-jenkins.doxyfile  rigs-of-rods-jenkins.doxyfile
doc/stylesheets/: doxygen-rigsofrods.css
source/: CMakeLists.txt
source/AA_DoxygenMainpage/: MainPage.h
source/OgreCanvas/: CMakeLists.txt  CanvasContext.cpp  CanvasContext.h  CanvasPrerequisites.h  CanvasTexture.cpp  CanvasTexture.h  DynamicTexture.cpp  DynamicTexture.h  source.txt
source/angelscript_addons/: CMakeLists.txt
source/common/: BitFlags.h
source/configurator/: CMakeLists.txt  Configurator.cpp  RoRConfig.h  SystemTools.cpp  conf_file.cpp  conf_file.h  config.xpm  icon.rc  input_engine.cpp  input_engine.h  joystick_cfg.xpm  keyboard_cfg.xpm  mouse_cfg.xpm  ocl_bwtest.h  opencllogo.xpm  statpict.cpp  statpict.h  treelistctrl.cpp  treelistctrl.h  wxValueChoice.h  wxutils.h
source/frontend/: CMakeLists.txt  MessageHandler.cpp  MessageHandler.h  icon.rc  main.cpp
source/main/: AppContext.cpp  AppContext.h  Application.cpp  Application.h  CMakeLists.txt  CaelumConfig.h  CaelumPrerequisites.h  ForwardDeclarations.h  GameContext.cpp  GameContext.h  GlobalEnvironment.h  MainMenu.cpp  MainMenu.h  MainMessageLoop.cpp  MainThread.cpp  MainThread.h  MsgQueue.h  PagedGeometryConfig.h  RoRPrerequisites.h  RoRVersion.h  icon.rc  main.cpp  pch.h  phc.h  plugins-AppImage.cfg.in  plugins-WO-conan.cfg.in  plugins.cfg.in  plugins_d.cfg.in  resource.h
source/microbenchmarks/: Bench_TruckParser_IdentifyKeyword.cpp  README.txt
source/rig_file_input_output/: ReadMe.txt  RigDefFile.cpp  RigDefFile.h  RigDefLimits.h  RigDefParser.cpp  RigDefParser.h  RigDefRegexes.h  RigDefValidator.cpp  RigDefValidator.h  RigDef_File.cpp  RigDef_File.h  RigDef_Limits.h  RigDef_Node.cpp  RigDef_Node.h  RigDef_Parser.cpp  RigDef_Parser.h  RigDef_Prerequisites.h  RigDef_Regexes.h  RigDef_SequentialImporter.cpp  RigDef_SequentialImporter.h  RigDef_Serializer.cpp  RigDef_Serializer.h  RigDef_Validator.cpp  RigDef_Validator.h
source/tdr2js/: CMakeLists.txt  main.cpp
source/updater/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  SHA1.cpp  SHA1.h  Timer.h  VersionCompare.h  action.xpm  cevent.cpp  cevent.h  checked.xpm  checkedlistctrl.cpp  checkedlistctrl.h  dest.xpm  download.xpm  extrapack.xpm  finished.xpm  icon.rc  installerlog.cpp  installerlog.h  licence.xpm  mainpack.xpm  platform.h  streams.xpm  symlink.cpp  symlink.h  threadpool.cpp  threadpool.h  tokenize.h  unchecked.xpm  unknown.xpm  utils.cpp  utils.h  welcome.xpm  wizard.cpp  wizard.h  wsyncdownload.cpp  wsyncdownload.h  wthread.cpp  wthread.h  (+2 more)
source/version_info/: CMakeLists.txt  RoRVersion.cpp.in  RoRVersion.h  RoRVersionDef.h.in
test/: CMakeLists.txt  README.md
test/UtilsTest/: CMakeLists.txt  UtilsTest.cpp
test/fakes/: AdvancedScreenFake.h  AeroEngineFake.h  AirBrakeFake.h  AircraftSimulationFake.h  AirfoilFake.h  AutoPilotFake.h  BatchPageFake.h  BeamConstantsFake.h  BeamEngineFake.h  BeamFactoryFake.h  BeamFake.h  BuoyanceFake.h  CacheSystemFake.h  CameraManagerFake.h  CharacterFactoryFake.h  CharacterFake.h  CmdKeyInertiaFake.h  CollisionsFake.h  ContentManagerFake.h  DashBoardManagerFake.h  DifferentialsFake.h  DynamicCollisionsFake.h  EnvironmentMapFake.h  ErrorUtilsFake.h  FlexAirfoilFake.h  FlexBodyFake.h  FlexFactoryFake.h  FlexMeshFake.h  FlexMeshWheelFake.h  FlexObjFake.h  ForceFeedbackFake.h  GUIInputManagerFake.h  GUIManagerFake.h  GUI_FrictionSettingsFake.h  GUI_GameConsoleFake.h  GUI_LoadingWindowFake.h  GUI_MainSelectorFake.h  GUI_MultiplayerClientListFake.h  GUI_SimUtilsFake.h  GfxActorFake.h  (+50 more)
test/proxies/: AdvancedScreen.h  AeroEngine.h  AirBrake.h  AircraftSimulation.h  Airfoil.h  AutoPilot.h  BaseLayout.h  BatchPage.h  Beam.h  BeamConstants.h  BeamData.h  BeamEngine.h  BeamFactory.h  BitFlags.h  Buoyance.h  CacheSystem.h  CameraManager.h  Character.h  CharacterFactory.h  ChatSystem.h  CmdKeyInertia.h  Collisions.h  ContentManager.h  DashBoardManager.h  Differentials.h  DynamicCollisions.h  EnvironmentMap.h  ErrorUtils.h  FlexAirfoil.h  FlexBody.h  FlexFactory.h  FlexMesh.h  FlexMeshWheel.h  FlexObj.h  ForceFeedback.h  GUIInputManager.h  GUIManager.h  GUI_FrictionSettings.h  GUI_GameConsole.h  GUI_LoadingWindow.h  (+65 more)
test/suites/: CMakeLists.txt  fakes_impl.inl
test/utils/: makefakes.py
(+2633 files in other folders)
